edit application file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client.id=5b80cb49be5ca853e41e
+github.client.secret=a344615d6118c4fa569a2618dd0f7e8e4401d48e
+github.redirect.uri=http://localhost:8887/callback
