--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8887
 github.client.id=5b80cb49be5ca853e41e
 github.client.secret=a344615d6118c4fa569a2618dd0f7e8e4401d48e
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:D:/HDataBase/forum
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
